[gd_scene load_steps=2 format=3 uid="uid://df268kn3mtab7"]

[ext_resource type="Script" path="res://scripts/SQL_controller.gd" id="1_agvvg"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_agvvg")

[node name="CreateTable" type="Button" parent="."]
layout_mode = 0
offset_left = 33.0
offset_top = 30.0
offset_right = 251.0
offset_bottom = 101.0
text = "Create Table"

[node name="InsertData" type="Button" parent="."]
layout_mode = 0
offset_left = 33.0
offset_top = 114.0
offset_right = 251.0
offset_bottom = 185.0
text = "Insert Data"

[node name="SelectData" type="Button" parent="."]
layout_mode = 0
offset_left = 33.0
offset_top = 198.0
offset_right = 251.0
offset_bottom = 269.0
text = "Select Data"

[node name="UploadData" type="Button" parent="."]
layout_mode = 0
offset_left = 33.0
offset_top = 282.0
offset_right = 251.0
offset_bottom = 353.0
text = "Upload Data"

[node name="DeleteData" type="Button" parent="."]
layout_mode = 0
offset_left = 33.0
offset_top = 372.0
offset_right = 251.0
offset_bottom = 443.0
text = "Delete Data"

[node name="CustomSelect" type="Button" parent="."]
layout_mode = 0
offset_left = 33.0
offset_top = 456.0
offset_right = 251.0
offset_bottom = 527.0
text = "Custom Select"

[node name="Name" type="Label" parent="."]
layout_mode = 0
offset_left = 377.0
offset_top = 64.0
offset_right = 424.0
offset_bottom = 87.0
text = "Name
"

[node name="Nameline" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 434.0
offset_top = 63.0
offset_right = 626.0
offset_bottom = 93.0

[node name="Score" type="Label" parent="."]
layout_mode = 0
offset_left = 378.0
offset_top = 102.0
offset_right = 425.0
offset_bottom = 125.0
text = "Score"

[node name="Scoreline" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 435.0
offset_top = 101.0
offset_right = 627.0
offset_bottom = 131.0

[connection signal="button_down" from="CreateTable" to="." method="_on_create_table_button_down"]
[connection signal="button_down" from="InsertData" to="." method="_on_insert_data_button_down"]
[connection signal="button_down" from="SelectData" to="." method="_on_select_data_button_down"]
[connection signal="button_down" from="UploadData" to="." method="_on_upload_data_button_down"]
[connection signal="button_down" from="DeleteData" to="." method="_on_delete_data_button_down"]
[connection signal="button_down" from="CustomSelect" to="." method="_on_custom_select_button_down"]
